# maslab-team3

./: README.md
cartographer_ws/src/cartographer_ros/cartographer_ros/cartographer_ros/: tf_bridge.cc
catkin_ws/src/autobot/: CMakeLists.txt  package.xml
catkin_ws/src/autobot/launch/: camera.launch  competition.launch  digital_electronics.launch  hector_slam.launch  kitware.launch  lidar.launch  lidar_view.launch  path_plan.launch  teleop.launch  viz_markers_with_slam.launch
catkin_ws/src/autobot/rviz/: cartographer.rviz  hector_slam.rviz  viz_markers_with_slam.rviz
catkin_ws/src/autobot/src/: auto_driver.py  auto_sorter.py  auto_wallfollower.py  auto_wallfollower_dumb.py  camera_edit.py  camera_pub.py  cv_utils.py  encoder_read_ROS.py  markers_pub.py  semibot.py
catkin_ws/src/autobot/src/cv_test/: cam_test.py  camera_pub_thread.py  cv_test_color_picker.py  cv_test_cylinder.py  cv_test_position_orientation.py  hsv_select_live.py
catkin_ws/src/autobot/src/electronics/: color_read.py  dispenser_motor.py  intake_motor.py  (+2 more)
catkin_ws/src/cartographer_config/: CMakeLists.txt  README.md  autobot.lua  cartographer.launch  cartographer_simulated.launch  package.xml
catkin_ws/src/joy/launch/: joy_node.launch
catkin_ws/src/kitware/: CMakeLists.txt  kitware.perspective  package.xml  readme.md
catkin_ws/src/kitware/launch/: kitware.launch
catkin_ws/src/kitware/msg/: DriveCMD.msg
catkin_ws/src/kitware/scripts/: kbd_driver.py  kitbot.py
catkin_ws/src/ydlidar/launch/: gazebo.launch  hector_slam.launch  lidar.launch
docs/: setup.txt  team_links.md  tf_notes.txt
(+28 files in other folders)
