<?xml version="1.0"?>
<package>
  <name>cartographer_config</name>
  <version>0.0.0</version>
  <description>Configuration files for cartographer</description>

  <maintainer email="tfh@mit.edu">Trevor Henderson</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
